--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@ dependencyResolutionManagement {
 }
 rootProject.name = "Score Droid"
 include ':app'
+include ':core:features:common:data'
 include ':core:features:create-match:public'
 include ':core:features:create-match:impl'
 include ':core:features:teams:public'
