--- a/core/features/teams/impl/build.gradle
+++ b/core/features/teams/impl/build.gradle
@@ -12,6 +12,8 @@ dependencies {
     implementation project(':core:features:teams:public')
     implementation project(':core:features:common:infra')
 
+    testImplementation project(':core:features:common:infra:test')
+
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
