--- a/core/features/create-match/impl/build.gradle
+++ b/core/features/create-match/impl/build.gradle
@@ -18,4 +18,5 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
     testImplementation 'com.google.truth:truth:1.1.3'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    testImplementation project(':core:features:common:infra:test')
 }
