--- a/settings.gradle
+++ b/settings.gradle
@@ -17,7 +17,7 @@ include ':app'
 include ':core:features:common:data'
 include ':core:features:common:infra'
 include ':core:features:common:infra:test'
-include ':core:features:create-match:public'
-include ':core:features:create-match:impl'
+include ':core:features:match:public'
+include ':core:features:match:impl'
 include ':core:features:teams:public'
 include ':core:features:teams:impl'
