--- a/core/features/match/impl/build.gradle
+++ b/core/features/match/impl/build.gradle
@@ -9,7 +9,7 @@ java {
 }
 
 dependencies {
-    implementation project(':core:features:create-match:public')
+    implementation project(':core:features:match:public')
     implementation project(':core:features:common:infra')
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
