add score module

--- a/settings.gradle
+++ b/settings.gradle
@@ -19,5 +19,7 @@ include ':core:features:common:infra'
 include ':core:features:common:infra:test'
 include ':core:features:match:public'
 include ':core:features:match:impl'
+include ':core:features:score:public'
+include ':core:features:score:impl'
 include ':core:features:teams:public'
 include ':core:features:teams:impl'
