--- a/core/features/score/impl/build.gradle
+++ b/core/features/score/impl/build.gradle
@@ -10,6 +10,7 @@ java {
 
 dependencies {
     implementation project(':core:features:score:public')
+    implementation project(':core:features:common:infra')
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
@@ -17,4 +18,5 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
     testImplementation 'com.google.truth:truth:1.1.3'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    testImplementation project(':core:features:common:infra:test')
 }
