add domain module

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,7 @@ dependencyResolutionManagement {
 rootProject.name = "Score Droid"
 include ':app'
 include ':core:features:common:data'
+include ':core:features:common:domain'
 include ':core:features:common:infra'
 include ':core:features:common:infra:test'
 include ':core:features:match:public'
