add common utils module

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,6 +18,7 @@ include ':core:features:common:data'
 include ':core:features:common:domain'
 include ':core:features:common:infra'
 include ':core:features:common:infra:test'
+include ':core:features:common:utils'
 include ':core:features:match:public'
 include ':core:features:match:impl'
 include ':core:features:score:public'
