move mapper to util module

--- a/core/features/match/impl/build.gradle
+++ b/core/features/match/impl/build.gradle
@@ -11,6 +11,7 @@ java {
 dependencies {
     implementation project(':core:features:match:public')
     implementation project(':core:features:common:infra')
+    implementation project(':core:features:common:utils')
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
