add more modules to infra

--- a/core/features/common/infra/public/build.gradle
+++ b/core/features/common/infra/public/build.gradle
@@ -10,5 +10,6 @@ java {
 }
 
 dependencies {
-    api project(':core:features:common:infra:public')
+    api project(':core:features:common:data')
+    api project(':core:features:common:domain')
 }
