--- a/settings.gradle
+++ b/settings.gradle
@@ -16,7 +16,8 @@ rootProject.name = "Score Droid"
 include ':app'
 include ':core:features:common:data'
 include ':core:features:common:domain'
-include ':core:features:common:infra'
+include ':core:features:common:infra:dependencies'
+include ':core:features:common:infra:public'
 include ':core:features:common:infra:test'
 include ':core:features:common:utils'
 include ':core:features:match:public'
