--- a/core/features/common/infra/dependencies/build.gradle
+++ b/core/features/common/infra/dependencies/build.gradle
@@ -12,4 +12,5 @@ java {
 dependencies {
     api project(':core:features:common:data')
     api project(':core:features:common:domain')
+    api project(':core:features:common:infra:commonmodels')
 }
