--- a/core/features/common/infra/public/build.gradle
+++ b/core/features/common/infra/public/build.gradle
@@ -12,4 +12,6 @@ java {
 dependencies {
     api project(':core:features:common:data')
     api project(':core:features:common:domain')
+    api project(':core:features:common:infra:commonmodels')
+    implementation project(':core:features:common:infra:dependencies')
 }
