--- a/core/features/score/impl/build.gradle
+++ b/core/features/score/impl/build.gradle
@@ -15,10 +15,7 @@ dependencies {
     implementation project(':core:features:common:utils')
 
     implementation libs.coroutines.core
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
-    testImplementation 'com.google.truth:truth:1.1.3'
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    testRuntimeOnly libs.test.junit.engine
+    testImplementation libs.bundles.unitTest
     testImplementation project(':core:features:common:infra:test')
 }
