--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,16 @@
 [versions]
 coroutines = "1.6.4"
+junit = "5.8.2"
+truth = "1.1.3"
 
 [libraries]
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+
+test-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
+test-junit-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
+test-junit-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
+test-junit-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit" }
+test-truth = { module = "com.google.truth:truth", version.ref = "truth" }
+
+[bundles]
+unitTest = ["test-junit-api", "test-junit-params", "test-truth", "test-coroutines"]
