--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,6 @@ android {
 dependencies {
 
     implementation libs.androidx.core.ktx
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation libs.androidx.appcompat
     implementation 'com.google.android.material:material:1.6.1'
 }
