migrate android application plugin to version catalog

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    alias libs.plugins.android.application
     id 'org.jetbrains.kotlin.android'
     id 'de.mannodermaus.android-junit5'
     id 'io.gitlab.arturbosch.detekt'
