migrate android library plugin to version catalog

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,3 +24,4 @@ unitTest = ["test-junit-api", "test-junit-params", "test-truth", "test-coroutine
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+android-library = { id = "com.android.library", version.ref = "agp" }
