--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
 
 plugins {
     alias libs.plugins.android.application apply false
-    id 'com.android.library' version '7.2.1' apply false
+    alias libs.plugins.android.library apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.7.10' apply false
     id 'io.gitlab.arturbosch.detekt' version '1.21.0'
