--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     alias libs.plugins.android.application
-    id 'org.jetbrains.kotlin.android'
+    alias libs.plugins.kotlin.android
     id 'de.mannodermaus.android-junit5'
     id 'io.gitlab.arturbosch.detekt'
 }
