--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 plugins {
     alias libs.plugins.android.application apply false
     alias libs.plugins.android.library apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    alias libs.plugins.kotlin.android apply false
     id 'org.jetbrains.kotlin.jvm' version '1.7.10' apply false
     id 'io.gitlab.arturbosch.detekt' version '1.21.0'
 }
