--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ androidx-appcompat = "1.4.2"
 androidx-core = "1.8.0"
 coroutines = "1.6.4"
 junit = "5.8.2"
+kotlin = "1.7.10"
 material = "1.6.1"
 truth = "1.1.3"
 
@@ -25,3 +26,4 @@ unitTest = ["test-junit-api", "test-junit-params", "test-truth", "test-coroutine
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
