--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,3 +27,4 @@ unitTest = ["test-junit-api", "test-junit-params", "test-truth", "test-coroutine
 android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
