--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ plugins {
     alias libs.plugins.android.library apply false
     alias libs.plugins.kotlin.android apply false
     alias libs.plugins.kotlin.jvm apply false
-    id 'io.gitlab.arturbosch.detekt' version '1.21.0'
+    alias libs.plugins.detekt apply false
 }
 
 allprojects {
