--- a/core/features/common/utils/build.gradle
+++ b/core/features/common/utils/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java-library'
     alias libs.plugins.kotlin.jvm
-    id 'io.gitlab.arturbosch.detekt'
+    alias libs.plugins.detekt
 }
 
 java {
