--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ agp = "7.2.1"
 androidx-appcompat = "1.4.2"
 androidx-core = "1.8.0"
 coroutines = "1.6.4"
+detekt = "1.21.0"
 junit = "5.8.2"
 kotlin = "1.7.10"
 material = "1.6.1"
@@ -26,5 +27,6 @@ unitTest = ["test-junit-api", "test-junit-params", "test-truth", "test-coroutine
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
+detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
