migrate android junit5 plugin to version catalog

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     alias libs.plugins.android.application
     alias libs.plugins.kotlin.android
-    id 'de.mannodermaus.android-junit5'
+    alias libs.plugins.android.junit5
     alias libs.plugins.detekt
 }
 
