--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "7.2.1"
+android-junit5 = "1.8.2.1"
 androidx-appcompat = "1.4.2"
 androidx-core = "1.8.0"
 coroutines = "1.6.4"
@@ -26,6 +27,7 @@ unitTest = ["test-junit-api", "test-junit-params", "test-truth", "test-coroutine
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+android-junit5 = { id = "de.mannodermaus.android-junit5", version.ref = "android-junit5" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
