--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    dependencies {
-        classpath 'de.mannodermaus.gradle.plugins:android-junit5:1.8.2.1'
-    }
-}
-
 plugins {
     alias libs.plugins.android.application apply false
     alias libs.plugins.android.library apply false
     alias libs.plugins.kotlin.android apply false
     alias libs.plugins.kotlin.jvm apply false
     alias libs.plugins.detekt apply false
+    alias libs.plugins.android.junit5 apply false
 }
 
 allprojects {
