--- a/settings.gradle
+++ b/settings.gradle
@@ -12,7 +12,7 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Score Droid"
+rootProject.name = "score-droid"
 include ':app'
 include ':core:features:common:data'
 include ':core:features:common:domain'
