--- a/build-logic/convention/build.gradle
+++ b/build-logic/convention/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    alias libs.plugins.kotlin.jvm
+}
+
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
