create junit 5 plugin

--- a/build-logic/convention/build.gradle
+++ b/build-logic/convention/build.gradle
@@ -1,8 +1,21 @@
 plugins {
     alias libs.plugins.kotlin.jvm
+    id 'java-gradle-plugin'
+
 }
+
+group = "org.scoredroid.buildlogic"
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
+}
+
+gradlePlugin {
+    plugins {
+        simplePlugin {
+            id = "org.scoredroid.java-module-junit5"
+            implementationClass = "org.scoredroid.conventionplugins.JavaModuleJunit5ConventionPlugin"
+        }
+    }
 }
