--- a/build-logic/convention/build.gradle
+++ b/build-logic/convention/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     alias libs.plugins.kotlin.jvm
     id 'java-gradle-plugin'
-
 }
 
 group = "org.scoredroid.buildlogic"
@@ -13,9 +12,21 @@ java {
 
 gradlePlugin {
     plugins {
-        simplePlugin {
+        register("javaModuleJunit5") {
             id = "org.scoredroid.java-module-junit5"
             implementationClass = "org.scoredroid.conventionplugins.JavaModuleJunit5ConventionPlugin"
+        }
+        register("javaModule") {
+            id = "org.scoredroid.java-module"
+            implementationClass = "org.scoredroid.conventionplugins.JavaModuleConventionPlugin"
+        }
+        register("publicFeature") {
+            id = "org.scoredroid.public-feature"
+            implementationClass = "org.scoredroid.conventionplugins.JavaPublicFeatureModuleConventionPlugin"
+        }
+        register("implFeature") {
+            id = "org.scoredroid.impl-feature"
+            implementationClass = "org.scoredroid.conventionplugins.JavaImplFeatureModuleConventionPlugin"
         }
     }
 }
