--- a/core/features/common/infra/commonmodels/build.gradle
+++ b/core/features/common/infra/commonmodels/build.gradle
@@ -1,13 +1,3 @@
 plugins {
-    id 'java-library'
-    alias libs.plugins.kotlin.jvm
-    alias libs.plugins.detekt
-}
-
-java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
-}
-
-dependencies {
+    id 'org.scoredroid.java-module'
 }
