migrate to type-safe project dependencies

--- a/core/features/common/infra/dependencies/build.gradle
+++ b/core/features/common/infra/dependencies/build.gradle
@@ -3,6 +3,6 @@ plugins {
 }
 
 dependencies {
-    api project(':core:features:common:domain')
-    api project(':core:features:common:infra:commonmodels')
+    api projects.core.features.common.domain
+    api projects.core.features.common.infra.commonmodels
 }
