--- a/core/features/common/utils/build.gradle
+++ b/core/features/common/utils/build.gradle
@@ -3,6 +3,6 @@ plugins {
 }
 
 dependencies {
-    api project(':core:features:common:data')
-    api project(':core:features:common:domain')
+    api projects.core.features.common.data
+    api projects.core.features.common.domain
 }
