add custom assertion

--- a/core/features/common/infra/test/build.gradle
+++ b/core/features/common/infra/test/build.gradle
@@ -5,4 +5,7 @@ plugins {
 dependencies {
     api projects.core.features.common.infra.public
     implementation projects.core.features.common.infra.dependencies
+    implementation projects.core.features.common.utils
+
+    implementation libs.test.truth
 }
