initial flow implementation

--- a/core/features/common/infra/public/build.gradle
+++ b/core/features/common/infra/public/build.gradle
@@ -7,4 +7,6 @@ dependencies {
     api projects.core.features.common.domain
     api projects.core.features.common.infra.commonmodels
     implementation projects.core.features.common.infra.dependencies
+
+    implementation libs.coroutines.core
 }
