--- a/core/features/common/infra/test/build.gradle
+++ b/core/features/common/infra/test/build.gradle
@@ -7,5 +7,6 @@ dependencies {
     implementation projects.core.features.common.infra.dependencies
     implementation projects.core.features.common.utils
 
+    implementation libs.coroutines.core
     implementation libs.test.truth
 }
