--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ junit = "5.9.0"
 kotlin = "1.7.10"
 material = "1.6.1"
 truth = "1.1.3"
+turbine = "0.9.0"
 
 [libraries]
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
@@ -21,9 +22,11 @@ test-junit-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref =
 test-junit-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
 test-junit-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit" }
 test-truth = { module = "com.google.truth:truth", version.ref = "truth" }
+test-turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
+
 
 [bundles]
-unitTest = ["test-junit-api", "test-junit-params", "test-truth", "test-coroutines"]
+unitTest = ["test-junit-api", "test-junit-params", "test-truth", "test-coroutines", "test-turbine"]
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
