--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ android-junit5 = "1.8.2.1"
 androidx-appcompat = "1.5.0"
 androidx-core = "1.8.0"
 coroutines = "1.6.4"
+dagger = "2.44"
 detekt = "1.21.0"
 junit = "5.9.0"
 kotlin = "1.7.10"
@@ -15,6 +16,8 @@ turbine = "0.9.0"
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+dagger = { module = "com.google.dagger:dagger", version.ref = "dagger" }
+dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = "dagger" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
 
 test-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
