--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,9 @@ dagger = "2.44"
 detekt = "1.21.0"
 junit = "5.9.1"
 kotlin = "1.7.10"
+ksp = "1.7.20-1.0.6"
 material = "1.6.1"
+room = "2.4.3"
 truth = "1.1.3"
 turbine = "0.9.0"
 
@@ -19,6 +21,8 @@ coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", ve
 dagger = { module = "com.google.dagger:dagger", version.ref = "dagger" }
 dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = "dagger" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
+room-runtime = { module = "androidx.room:room-runtime", version.ref = "room"}
+room-compiler = { module = "androidx.room:room-compiler", version.ref = "room"}
 
 test-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 test-junit-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
@@ -37,3 +41,5 @@ android-library = { id = "com.android.library", version.ref = "agp" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+
