--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,9 +3,12 @@ agp = "7.3.0"
 android-junit5 = "1.8.2.1"
 androidx-appcompat = "1.5.1"
 androidx-core = "1.9.0"
+androidx-junit = "1.1.3"
 coroutines = "1.6.4"
 dagger = "2.44"
 detekt = "1.21.0"
+espresso = "3.4.0"
+junit4 = "4.13.2"
 junit = "5.9.1"
 kotlin = "1.7.10"
 ksp = "1.7.10-1.0.6"
@@ -25,7 +28,10 @@ room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 
+test-androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-junit" }
 test-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
+test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
+test-junit4 = { module = "junit:junit", version.ref = "junit4" }
 test-junit-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
 test-junit-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
 test-junit-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit" }
