--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,15 +4,18 @@ android-junit5 = "1.8.2.1"
 androidx-appcompat = "1.5.1"
 androidx-core = "1.9.0"
 androidx-junit = "1.1.3"
+compose= "1.3.0"
+compose-material3 = "1.1.0-alpha01"
 coroutines = "1.6.4"
 dagger = "2.44"
 detekt = "1.21.0"
 espresso = "3.4.0"
+fragment = "1.5.4"
 junit4 = "4.13.2"
 junit = "5.9.1"
 kotlin = "1.7.10"
 ksp = "1.7.10-1.0.6"
-material = "1.6.1"
+material = "1.8.0-alpha02"
 room = "2.4.3"
 truth = "1.1.3"
 turbine = "0.9.0"
@@ -20,9 +23,12 @@ turbine = "0.9.0"
 [libraries]
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
+compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3"}
+compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose"}
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 dagger = { module = "com.google.dagger:dagger", version.ref = "dagger" }
 dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = "dagger" }
+fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragment" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
