--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ espresso = "3.4.0"
 fragment = "1.5.4"
 junit4 = "4.13.2"
 junit = "5.9.1"
+lifecycle = "2.5.1"
 kotlin = "1.7.10"
 ksp = "1.7.10-1.0.6"
 material = "1.8.0-alpha02"
@@ -23,7 +24,7 @@ turbine = "0.9.0"
 [libraries]
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3"}
+compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
 compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose"}
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 dagger = { module = "com.google.dagger:dagger", version.ref = "dagger" }
@@ -33,6 +34,7 @@ material = { module = "com.google.android.material:material", version.ref = "mat
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
 
 test-androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-junit" }
 test-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
