--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,5 @@ android.nonTransitiveRClass=true
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
+
+kotlin.jvm.target.validation.mode = error
