--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,8 +4,9 @@ android-junit5 = "1.8.2.1"
 androidx-appcompat = "1.5.1"
 androidx-core = "1.9.0"
 androidx-junit = "1.1.3"
-compose= "1.3.0"
+compose-compiler = "1.4.0-alpha02"
 compose-material3 = "1.1.0-alpha01"
+compose-ui = "1.3.3"
 coroutines = "1.6.4"
 dagger = "2.44"
 detekt = "1.21.0"
@@ -14,8 +15,8 @@ fragment = "1.5.4"
 junit4 = "4.13.2"
 junit = "5.9.1"
 lifecycle = "2.5.1"
-kotlin = "1.7.10"
-ksp = "1.7.10-1.0.6"
+kotlin = "1.7.21"
+ksp = "1.7.21-1.0.8"
 material = "1.8.0-alpha02"
 room = "2.4.3"
 truth = "1.1.3"
@@ -25,8 +26,8 @@ turbine = "0.9.0"
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
 compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose"}
-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose"}
+compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose-ui"}
+compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose-ui"}
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 dagger = { module = "com.google.dagger:dagger", version.ref = "dagger" }
 dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = "dagger" }
