--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ android-junit5 = "1.8.2.1"
 androidx-appcompat = "1.5.1"
 androidx-core = "1.9.0"
 androidx-junit = "1.1.3"
-compose-compiler = "1.4.0-alpha02"
+compose-compiler = "1.4.0"
 compose-material3 = "1.1.0-alpha01"
 compose-ui = "1.3.3"
 coroutines = "1.6.4"
@@ -15,8 +15,8 @@ fragment = "1.5.4"
 junit4 = "4.13.2"
 junit = "5.9.1"
 lifecycle = "2.5.1"
-kotlin = "1.7.21"
-ksp = "1.7.21-1.0.8"
+kotlin = "1.8.0"
+ksp = "1.8.0-1.0.9"
 material = "1.8.0-alpha02"
 room = "2.4.3"
 truth = "1.1.3"
