--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,7 +17,7 @@ junit = "5.9.2"
 lifecycle = "2.5.1"
 kotlin = "1.8.0"
 ksp = "1.8.0-1.0.9"
-material = "1.8.0-alpha02"
+material = "1.8.0"
 room = "2.4.3"
 truth = "1.1.3"
 turbine = "0.9.0"
