--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ dagger = "2.44.2"
 detekt = "1.22.0"
 espresso = "3.5.1"
 fragment = "1.5.5"
+java = "11"
 junit4 = "4.13.2"
 junit = "5.9.2"
 lifecycle = "2.5.1"
