--- a/gradle.properties
+++ b/gradle.properties
@@ -25,5 +25,6 @@ android.nonTransitiveRClass=true
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
+systemProp.org.gradle.kotlin.dsl.precompiled.accessors.strict=true
 
 kotlin.jvm.target.validation.mode = error
