--- a/build-logic/gradle.properties
+++ b/build-logic/gradle.properties
@@ -1,3 +1,5 @@
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
+systemProp.org.gradle.kotlin.dsl.precompiled.accessors.strict=true
+
