--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 agp = "7.4.2"
 android-junit5 = "1.8.2.1"
-androidx-appcompat = "1.6.0"
+androidx-appcompat = "1.7.0-alpha02"
 androidx-core = "1.9.0"
 androidx-junit = "1.1.3"
 compose-compiler = "1.4.0"
