--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 agp = "7.4.2"
 android-junit5 = "1.8.2.1"
 androidx-appcompat = "1.7.0-alpha02"
-androidx-core = "1.9.0"
+androidx-core = "1.10.0-rc01"
 androidx-junit = "1.1.3"
 compose-compiler = "1.4.0"
 compose-material3 = "1.1.0-alpha05"
