--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ androidx-core = "1.10.0-rc01"
 androidx-junit = "1.1.5"
 compose-compiler = "1.4.3"
 compose-material3 = "1.1.0-alpha08"
-compose-ui = "1.3.3"
+compose-ui = "1.4.0-rc01"
 coroutines = "1.6.4"
 dagger = "2.44.2"
 detekt = "1.22.0"
