--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ coroutines = "1.6.4"
 dagger = "2.45"
 detekt = "1.22.0"
 espresso = "3.5.1"
-fragment = "1.5.5"
+fragment = "1.6.0-alpha07"
 java = "11"
 junit4 = "4.13.2"
 junit = "5.9.2"
