--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ agp = "8.0.2"
 android-junit5 = "1.9.3.0"
 androidx-appcompat = "1.7.0-alpha02"
 androidx-core = "1.11.0-beta02"
-androidx-junit = "1.1.5"
+androidx-junit = "1.2.0-alpha01"
 compose-compiler = "1.4.3"
 compose-material3 = "1.1.0-alpha08"
 compose-ui = "1.4.0-rc01"
