--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ androidx-core = "1.11.0-beta02"
 androidx-junit = "1.2.0-alpha01"
 compose-compiler = "1.4.8"
 compose-material3 = "1.2.0-alpha02"
-compose-ui = "1.4.0-rc01"
+compose-ui = "1.5.0-beta03"
 coroutines = "1.6.4"
 dagger = "2.45"
 detekt = "1.22.0"
