--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ coroutines = "1.7.2"
 dagger = "2.46.1"
 detekt = "1.23.0"
 espresso = "3.6.0-alpha01"
-fragment = "1.6.0-alpha07"
+fragment = "1.6.0"
 java = "17"
 junit4 = "4.13.2"
 junit = "5.9.3"
