--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,7 +19,7 @@ lifecycle = "2.6.1"
 kotlin = "1.8.22"
 ksp = "1.8.22-1.0.11"
 material = "1.9.0"
-room = "2.5.0"
+room = "2.6.0-alpha01"
 truth = "1.1.3"
 turbine = "0.9.0"
 
