--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,13 @@
 [versions]
+# app
 agp = "8.0.2"
+compileSdk = "34"
+java = "17"
+kotlin = "1.8.22"
+minSdk = "25"
+targetSdk = "34"
+
+# libs
 android-junit5 = "1.9.3.0"
 androidx-appcompat = "1.7.0-alpha02"
 androidx-core = "1.11.0-beta02"
@@ -12,11 +20,9 @@ dagger = "2.46.1"
 detekt = "1.23.0"
 espresso = "3.6.0-alpha01"
 fragment = "1.6.0"
-java = "17"
 junit4 = "4.13.2"
 junit = "5.9.3"
 lifecycle = "2.6.1"
-kotlin = "1.8.22"
 ksp = "1.8.22-1.0.11"
 material = "1.9.0"
 room = "2.6.0-alpha01"
