--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ targetSdk = "34"
 # libs
 android-junit5 = "1.9.3.0"
 androidx-appcompat = "1.7.0-alpha02"
-androidx-core = "1.11.0-beta02"
+androidx-core = "1.12.0-alpha05"
 androidx-junit = "1.2.0-alpha01"
 compose-compiler = "1.4.8"
 compose-material3 = "1.2.0-alpha02"
