--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,7 +24,7 @@ junit4 = "4.13.2"
 junit = "5.9.3"
 lifecycle = "2.6.1"
 ksp = "1.8.22-1.0.11"
-material = "1.9.0"
+material = "1.10.0-alpha05"
 room = "2.6.0-alpha01"
 truth = "1.1.5"
 turbine = "0.9.0"
