--- a/gradle.properties
+++ b/gradle.properties
@@ -28,3 +28,5 @@ org.gradle.configureondemand=true
 systemProp.org.gradle.kotlin.dsl.precompiled.accessors.strict=true
 
 kotlin.jvm.target.validation.mode = error
+
+detekt.use.worker.api = true
