--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -331,7 +331,7 @@ naming:
   FunctionNaming:
     active: true
     excludes: ['**/test/**', '**/androidTest/**', '**/commonTest/**', '**/jvmTest/**', '**/androidUnitTest/**', '**/androidInstrumentedTest/**', '**/jsTest/**', '**/iosTest/**']
-    functionPattern: '[a-z][a-zA-Z0-9]*'
+    functionPattern: '[a-zA-Z][a-zA-Z0-9]*'
     excludeClassPattern: '$^'
   FunctionParameterNaming:
     active: true
@@ -802,7 +802,7 @@ formatting:
     indentSize: 4
     maxLineLength: 120
   BlockCommentInitialStarAlignment:
-    active: true
+    active: false
     autoCorrect: true
   ChainWrapping:
     active: true
