--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,7 +23,7 @@ espresso = "3.6.0-alpha01"
 fragment = "1.7.0-alpha01"
 immutable-collections = "0.3.5"
 junit4 = "4.13.2"
-junit = "5.9.3"
+junit = "5.10.0-RC2"
 lifecycle = "2.6.1"
 ksp = "1.8.22-1.0.11"
 material = "1.11.0-alpha01"
