--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,7 +24,7 @@ fragment = "1.7.0-alpha03"
 immutable-collections = "0.3.5"
 junit4 = "4.13.2"
 junit = "5.10.0"
-lifecycle = "2.6.1"
+lifecycle = "2.7.0-alpha01"
 ksp = "1.9.0-1.0.12"
 material = "1.11.0-alpha02"
 room = "2.6.0-alpha03"
