--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,7 +24,7 @@ fragment = "1.7.0-alpha03"
 immutable-collections = "0.3.5"
 junit4 = "4.13.2"
 junit = "5.10.0"
-lifecycle = "2.7.0-alpha01"
+viewmodel = "2.7.0-alpha01"
 ksp = "1.9.0-1.0.12"
 material = "1.11.0-alpha02"
 room = "2.6.0-alpha03"
@@ -46,8 +46,8 @@ material = { module = "com.google.android.material:material", version.ref = "mat
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
-viewmodel-savedstate = { module = "androidx.lifecycle:lifecycle-viewmodel-savedstate", version.ref = "lifecycle" }
+viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "viewmodel" }
+viewmodel-savedstate = { module = "androidx.lifecycle:lifecycle-viewmodel-savedstate", version.ref = "viewmodel" }
 
 test-androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-junit" }
 test-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
