--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -1093,7 +1093,7 @@ Compose:
     # allowedComposableFunctionNames: .*Presenter,.*MoleculePresenter
   ComposableParamOrder:
     active: true
-  PreviewNaming:
+  PreviewAnnotationNaming:
     active: true
   PreviewPublic:
     active: true
