use PreviewThemes annotation

--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -738,7 +738,7 @@ style:
   UnusedPrivateMember:
     active: true
     allowedNames: ''
-    ignoreAnnotated: ['Preview']
+    ignoreAnnotated: ['Preview', 'PreviewThemes']
   UnusedPrivateProperty:
     active: true
     allowedNames: '_|ignored|expected|serialVersionUID'
