--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ targetSdk = "34"
 # libs
 android-junit5 = "1.9.3.0"
 androidx-appcompat = "1.7.0-alpha03"
-androidx-core = "1.12.0"
+androidx-core = "1.13.0-alpha01"
 androidx-junit = "1.2.0-alpha01"
 compose-compiler = "1.5.3"
 compose-material3 = "1.2.0-alpha09"
