--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ androidx-core = "1.13.0-alpha02"
 androidx-junit = "1.2.0-alpha02"
 compose-compiler = "1.5.5"
 compose-material3 = "1.2.0-alpha12"
-compose-ui = "1.6.0-alpha08"
+compose-ui = "1.6.0-beta02"
 coroutines = "1.7.3"
 dagger = "2.48.1"
 detekt = "1.23.1"
