--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,7 +15,7 @@ androidx-junit = "1.2.0-alpha02"
 compose-compiler = "1.5.5"
 compose-material3 = "1.2.0-alpha12"
 compose-ui = "1.6.0-beta02"
-coroutines = "1.7.3"
+coroutines = "1.8.0-RC"
 dagger = "2.48.1"
 detekt = "1.23.1"
 detekt-compose-plugin = "0.3.0"
