--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,7 +26,7 @@ junit4 = "4.13.2"
 junit = "5.10.1"
 viewmodel = "2.7.0-rc01"
 ksp = "1.9.20-1.0.14"
-material = "1.11.0-beta01"
+material = "1.12.0-alpha01"
 room = "2.6.0"
 truth = "1.1.5"
 turbine = "1.0.0"
