--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ androidx-appcompat = "1.7.0-alpha03"
 androidx-core = "1.13.0-alpha02"
 androidx-junit = "1.2.0-alpha02"
 compose-compiler = "1.5.7"
-compose-material3 = "1.2.0-alpha12"
+compose-material3 = "1.2.0-beta01"
 compose-ui = "1.6.0-beta02"
 coroutines = "1.8.0-RC"
 dagger = "2.49"
