--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -1089,9 +1089,13 @@ Compose:
     active: true
   MultipleEmitters:
     active: true
-    # You can optionally add your own composables here
+    # -- You can optionally add your own composables here that will count as content emitters
     # contentEmitters: MyComposable,MyOtherComposable
+    # -- You can add composables here that you don't want to count as content emitters (e.g. custom dialogs or modals)
+    # contentEmittersDenylist: MyNonEmitterComposable
   MutableParams:
+    active: true
+  MutableStateParam:
     active: true
   ComposableNaming:
     active: true
