--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,7 +23,7 @@ fragment = "1.7.0-alpha09"
 immutable-collections = "0.3.7"
 junit4 = "4.13.2"
 junit = "5.10.1"
-viewmodel = "2.7.0-rc02"
+viewmodel = "2.8.0-alpha01"
 kotest = "5.8.0"
 ksp = "1.9.21-1.0.15"
 material = "1.12.0-alpha02"
