--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ androidx-junit = "1.2.0-alpha03"
 compose-compiler = "1.5.10"
 compose-material3 = "1.2.0"
 compose-ui = "1.7.0-alpha03"
-coroutines = "1.8.0-RC2"
+coroutines = "1.8.0"
 dagger = "2.50"
 detekt = "1.23.5"
 detekt-compose-plugin = "0.3.11"
