--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,7 @@ coroutines = "1.8.1"
 dagger = "2.51.1"
 detekt = "1.23.6"
 detekt-compose-plugin = "0.4.1"
-espresso = "3.6.0-alpha03"
+espresso = "3.6.0-beta01"
 fragment = "1.7.0-alpha10"
 immutable-collections = "0.3.7"
 junit4 = "4.13.2"
