--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,7 +19,7 @@ dagger = "2.51.1"
 detekt = "1.23.6"
 detekt-compose-plugin = "0.4.1"
 espresso = "3.6.0-beta01"
-fragment = "1.7.0-alpha10"
+fragment = "1.8.0-beta01"
 immutable-collections = "0.3.7"
 junit4 = "4.13.2"
 junit = "5.10.2"
