--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,7 +23,7 @@ fragment = "1.8.0-beta01"
 immutable-collections = "0.3.7"
 junit4 = "4.13.2"
 junit = "5.11.0-M2"
-viewmodel = "2.8.0-alpha02"
+viewmodel = "2.8.0"
 kotest = "5.8.0"
 ksp = "1.9.22-1.0.17"
 material = "1.12.0-alpha03"
