move impl feature convention plugin to catalog

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -83,4 +83,5 @@ test-fixtures = { id = "java-test-fixtures" }
 
 # convention
 scoredroid-kotlin-module = { id = "org.scoredroid.kotlin-module" }
+scoredroid-feature-impl = { id = "org.scoredroid.feature-impl" }
 scoredroid-feature-public = { id = "org.scoredroid.feature-public" }
