move android feature public convention plugin to catalog

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -83,6 +83,7 @@ test-fixtures = { id = "java-test-fixtures" }
 
 # convention
 scoredroid-android-feature-impl = { id = "org.scoredroid.android-feature-impl" }
+scoredroid-android-feature-public = { id = "org.scoredroid.android-feature-public" }
 scoredroid-android-lib = { id = "org.scoredroid.android-lib" }
 scoredroid-kotlin-module = { id = "org.scoredroid.kotlin-module" }
 scoredroid-feature-entrypoint = { id = "org.scoredroid.feature-entrypoint" }
