move enable compose convention plugin to catalog

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -86,6 +86,7 @@ scoredroid-android-compose = { id = "org.scoredroid.android-compose" }
 scoredroid-android-feature-impl = { id = "org.scoredroid.android-feature-impl" }
 scoredroid-android-feature-public = { id = "org.scoredroid.android-feature-public" }
 scoredroid-android-lib = { id = "org.scoredroid.android-lib" }
+scoredroid-enable-compose = { id = "org.scoredroid.enable-compose" }
 scoredroid-kotlin-module = { id = "org.scoredroid.kotlin-module" }
 scoredroid-feature-entrypoint = { id = "org.scoredroid.feature-entrypoint" }
 scoredroid-feature-impl = { id = "org.scoredroid.feature-impl" }
